# CPlusPlusQT6Skel

./: .gitignore  CMakeLists.txt  README.md  dev_tool.py  download_qt6.py
python/dev_tool/: __init__.py  cli.py  config.py  constants.py  project.py  qml.py  qt.py  utils.py
python/download_qt6/: cli.py  downloader.py
qml/: Main.qml
src/: cli_main.cpp  greeter.cpp  greeter.h  main.cpp  qml_curses_frontend.cpp  qml_curses_frontend.h  qml_parser.cpp  qml_parser.h
tests/: greeter_test.cpp  main_qml_test.cpp  qml_curses_frontend_test.cpp  qml_parser_test.cpp  test_dev_tool_py.py
